--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lotto-app",
   "version": "0.1.0",
-  "homepage": "https://kbwoodall.github.io/lotto",
+  "homepage": "https://kbwoodall.github.io/lottoapp",
   "private": true,
   "scripts": {
   "dev": "vite",
