--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vite": "4.4.9",
     "@vitejs/plugin-react": "4.0.0",
     "tailwindcss": "^3.4.7",
+    "gh-pages": "^6.3.0",  
     "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0"
   }
